--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
+    "sass": "^1.77.8",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.10"
   },
