--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
@@ -22,7 +23,8 @@
     "redux": "^5.0.1",
     "sass": "^1.77.8",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.10"
+    "swiper": "^11.1.10",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
